--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
+streamlit
 numpy
-matplotlib.pyplot
+matplotlib
 pandas
-sklearn.compose
-sklearn.preprocessing
-sklearn.import
-sklearn.model_selection
-sklearn.ensemble
-sklearn.linear_model
-sklearn.neural_network
-pickle
 xgboost
+scikit-learn
 scipy
-time
 flask
 librosa
-uuid
-os
